[package]
name = "rust-llm-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package.ggml-sys]
opt-level = 3

[dependencies]
llama-cpp-rs = { path = "external/llama-cpp-rs" }
rust-llm-server-common = { path = "rust-llm-server-common" }
message-io = "0.18.1"
rand = "0.8.5"
bincode = "1.3.1"
